--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,31 @@
 .read-the-docs {
   color: #888;
 }
+
+/* App.css */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  color:black;
+  width: 600px;
+  height: 300px;
+  overflow: auto;
+}
+
+.popup-inner-input {
+  margin: 10px;
+}
